--- a/index.html
+++ b/index.html
@@ -21,7 +21,83 @@
     ></script>
 
     <title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
+
+      * {
+        font-family: "Gowun Dodum", sans-serif;
+      }
+
+      .myTitle {
+        background-color: green;
+
+        color: white;
+
+        height: 250px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        background-image: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+          ),
+          url("https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg");
+        background-position: center;
+        background-size: cover;
+      }
+
+      .myTitle > button {
+        width: 250px;
+        height: 50px;
+
+        background-color: transparent;
+
+        border: 1px solid white;
+        color: white;
+
+        border-radius: 50px;
+
+        margin-top: 20px;
+      }
+
+      .myTitle > button:hover {
+        border: 2px solid white;
+      }
+
+      .myCards {
+        width: 1200px;
+        margin: 20px auto 20px auto;
+      }
+
+      .myComment {
+        color: gray;
+      }
+
+      .myPost {
+        width: 500px;
+        margin: 20px auto 20px auto;
+        padding: 20px 20px 20px 20px;
+
+        box-shadow: 0px 0px 3px 0px gray;
+      }
+
+      .myBtn {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        margin-top: 20px;
+      }
+
+      .myBtn > button {
+        margin-right: 10px;
+      }
+    </style>
   </head>
   <body>
     <div class="mytitle">
