--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         background-size: cover;
       }
 
-      .myTitle > button {
+      .mytitle > button {
         width: 250px;
         height: 50px;
 
@@ -64,20 +64,20 @@
         margin-top: 20px;
       }
 
-      .myTitle > button:hover {
+      .mytitle > button:hover {
         border: 2px solid white;
       }
 
-      .myCards {
+      .mycards {
         width: 1200px;
         margin: 20px auto 20px auto;
       }
 
-      .myComment {
+      .mycomment {
         color: gray;
       }
 
-      .myPost {
+      .mypost {
         width: 500px;
         margin: 20px auto 20px auto;
         padding: 20px 20px 20px 20px;
@@ -85,7 +85,7 @@
         box-shadow: 0px 0px 3px 0px gray;
       }
 
-      .myBtn {
+      .mybtn {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -94,7 +94,7 @@
         margin-top: 20px;
       }
 
-      .myBtn > button {
+      .mybtn > button {
         margin-right: 10px;
       }
     </style>
