--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         font-family: "Gowun Dodum", sans-serif;
       }
 
-      .myTitle {
+      .mytitle {
         background-color: green;
 
         color: white;
